#159987727 Add Favourite Article functionality (#46)
* feat(event): add favorite articles function

- authenticated user have favorite articles
- can check the list of favorite articles they have

[Delivers #159987727]

* fix: fix merge conflict

* fix: fix hound errors

* fix: bugFix

- make changes according to feedback on PR
- add more test for increasing coverage

[Delivers #159987727]

* fix: make changes according to PR comments

- increase coverage by writing more tests
